data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1180.wast
;; 1. **Test 1: Simple Loop with Call**:    - A loop that repeatedly calls an imported function that returns an integer and increments a counter.    - **Constraint Checked**: Ensures that the control flow correctly jumps back to the beginning of the loop after the function call.    - **Relevance**: Tests the proper handling of function calls within a loop, checking for stack integrity and context extension.

(assert_invalid
  (module
    (import "env" "increment" (func $increment (result i32)))
    (func $test_loop
      (i32.const 0)
      (loop (result i32)
        (call $increment)
        (br_if 0 (i32.lt_s (i32.const 10) (i32.add (i32.const 1) (call $increment))))
      )
    )
  )
  "type mismatch"
)